# is_svg-rs

./: Cargo.toml  README.md
src/: lib.rs
tests/: mod.rs
